<resources>
    <string name="app_name">모이닷</string>
    <string name="binding_error_msg">binding이 초기화되지 않았습니다.</string>
    <string name="all_next">다음</string>
    <string name="all_confirm">확인</string>
    <string name="all_cancel">취소하기</string>
    <string name="all_remove">내보내기</string>
    <string name="all_out">나가기</string>
    <string name="all_moidot_space">모이닷 스페이스</string>
    <string name="loading_msg">잠시만 기다려주세요!</string>
    <string name="network_error_msg">네트워크 통신오류!</string>
    <string name="scheme_sign_in">scheme_sign_in</string>
    <string name="scheme_main">scheme_main</string>
    <string name="scheme_invite">scheme_invite</string>
    <string name="link_invite_success_toast">클립보드에 링크가 복사되었어요.</string>
    <string name="link_invite_clip_text">%s에서\n초대장이 도착했어요!\n\n%s</string>
    <string name="component_transportation_public">대중교통</string>
    <string name="component_transportation_car">자동차</string>
    <string name="bottom_sheet_location_picker_title">출발위치를 등록해주세요</string>
    <string name="bottom_sheet_location_picker_load_current_location">현재 위치 불러오기</string>
    <string name="bottom_sheet_location_picker_search_hint">위치를 입력해주세요.</string>
    <string name="bottom_sheet_location_picker_empty_title">앗, 위치를 발견할 수 없어요!</string>
    <string name="bottom_sheet_location_picker_empty_content">정확한 위치 혹은 장소명을\n검색해주세요</string>
    <string name="popup_vote_people_title">%s에 투표한 모임원</string>
    <string name="popup_vote_people_content">%d명의 모임원이 이 장소에 투표했어요!</string>
    <string name="popup_edit_done_title">편집이 완료되었습니다.</string>
    <string name="popup_edit_done_transport_type">이동 수단</string>
    <string name="popup_edit_done_nickname">닉네임</string>
    <string name="popup_edit_done_location">출발 위치</string>
    <string name="permission_dialog_ok">확인</string>
    <string name="permission_dialog_location_title">위치 접근 권한</string>
    <string name="permission_dialog_location_content">위치 접근 권한이 필요합니다.\n확인을 누르면 설정화면으로 이동합니다.</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_noti_title">모임</string>
    <string name="main_btm_nav_calendar_title">캘린더</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>
    <string name="onboard_skip">건너뛰기</string>
    <string name="onboard_first_bubble_one">다들 어디쯤에 사시나요?</string>
    <string name="onboard_first_bubble_two">우리.. 어디에서 만나는 게 좋을까요?</string>
    <string name="onboard_first_keyword_team_play">팀플</string>
    <string name="onboard_first_keyword_study">스터디</string>
    <string name="onboard_first_keyword_friend">친목모임</string>
    <string name="onboard_first_keyword_club">동호회</string>
    <string name="onboard_first_keyword_etc">그 외 단체모임</string>
    <string name="onboard_first_etc">등등&#8230;</string>
    <string name="onboard_first_info_sub">모임장소를 정하는 것이 어렵다면?</string>
    <string name="onboard_first_info_main">모이닷에서 편하게 정해보세요!</string>
    <string name="onboard_second_info_title">모이닷,\n어떻게 사용하나요?</string>
    <string name="onboard_second_title_social_sign_in">소셜로그인으로 시작하기</string>
    <string name="onboard_second_title_moidot_space">모이닷스페이스 만들기</string>
    <string name="onboard_second_title_invite">모임원 초대하기</string>
    <string name="onboard_second_title_recommend_place">중간장소, 추천장소 확인하기</string>
    <string name="onboard_second_title_vote_place">장소 투표하기</string>
    <string name="onboard_second_content_social_sign_in">모이닷은 사용자의 ‘모이닷스페이스’ 히스토리를 저장하기 위해 소셜로그인 정보를 수집해요. 복잡한 회원가입절차가 없으니 간편하게 시작하실 수 있어요.</string>
    <string name="onboard_second_content_moidot_space">모임장이 되어 모이닷스페이스를 만들어보세요!\n모임날짜, 출발장소와 이동수단을 입력하면 간단하게 만들 수 있어요.</string>
    <string name="onboard_second_content_invite">모임원들과 함께 장소를 조율할 수 있도록\n모이닷스페이스의 링크를 모임원에게 전송해주세요!</string>
    <string name="onboard_second_content_recommend_place">모임원들이 입력한 정보에 따라 모이닷이 중간장소와 해당 장소에서 갈 만한 곳들을 추천해드려요!</string>
    <string name="onboard_second_content_vote_place">추천된 장소 중에서도 고민된다면?\n장소 투표를 진행하여 모임장소를 확정해보세요!</string>
    <string name="sign_in_re_sign_in_info_msg">접속한지 오래되어 자동 로그아웃이 되었어요\n다시 로그인해주세요</string>
    <string name="sign_in_kakao_btn">카카오로 시작하기</string>
    <string name="sign_in_naver_btn">네이버로 시작하기</string>
    <string name="sign_in_google_btn">Google로 시작하기</string>
    <string name="sign_in_info_title">왜 소셜로그인으로 로그인하나요?</string>
    <string name="sign_in_info_content">모이닷은 여러분들의 모임관리가 수월하도록 장소 조율\n내역을 저장하기 때문에 소셜로그인이 필요합니다.\n히스토리 저장 외의 목적으로 개인정보를 수집하지 않습니다.</string>
    <string name="group_top_bar">모이닷 스페이스</string>
    <string name="group_search_hint">참여중인 모임을 검색해보세요.</string>
    <string name="group_filter_newest">최신순</string>
    <string name="group_filter_oldest">오래된 순</string>
    <string name="group_filter_abc">가나다순</string>
    <string name="group_empty_title">앗, 아직 모임이 없어요!</string>
    <string name="group_empty_content">모임장이 되어\n모이닷 스페이스를 만들어볼까요?</string>
    <string name="group_empty_btn_add_group">모이닷 스페이스 만들기</string>
    <string name="group_exist_exit_group"><u>모이닷 스페이스 나가기</u></string>
    <string name="group_end_exit_mode">나가기 모드 끝내기</string>
    <string name="group_vote_state_voting">모임장소 투표 중</string>
    <string name="group_vote_state_done">모임장소 확정</string>
    <string name="group_add_member">모임원 추가</string>
    <string name="group_exit">나가기</string>
    <string name="group_cannot_exit_info">투표중인\n모이닷 스페이스는\n나갈 수 없어요.</string>
    <string name="group_create_date">생성일시: %s</string>
    <string name="input_group_top_bar">모이닷 스페이스 만들기</string>
    <string name="input_group_name">모임명</string>
    <string name="input_group_nickname">닉네임</string>
    <string name="input_group_start_location">출발위치</string>
    <string name="input_group_nickname_input_cnt">공백포함 %d / 8자</string>
    <string name="input_group_nickname_input_hint">8자 이내의 닉네임을 입력해주세요.</string>
    <string name="input_group_start_location_hint">주소를 입력해주세요.</string>
    <string name="input_group_to_use">에서 사용할</string>
    <string name="input_group_transportation_type">이동수단을 선택해주세요.</string>
    <string name="input_group_title_input_your_info">당신의 정보를 알려주세요.</string>
    <string name="input_group_info_which_group">어떤 모임인가요?</string>
    <string name="input_group_info_title">모임의 이름을 알려주세요.</string>
    <string name="input_group_name_input_hint">15자 이내의 모임명을 입력해주세요.</string>
    <string name="input_group_name_input_cnt">공백포함 %d / 15자</string>
    <string name="edit_my_group_info_title">내 정보 편집하기</string>
    <string name="edit_my_group_info_btn">내 정보 수정하기</string>
    <string name="participate_group_nickname_duplicate_error">중복된 닉네임이 있습니다.</string>
    <string name="space_top_bar">모이닷 팀 프로젝트</string>
    <string name="space_timeline">타임라인</string>
    <string name="space_tab_place">모임 장소</string>
    <string name="space_tab_vote">장소 투표</string>
    <string name="space_tab_info">모임 정보</string>
    <string name="space_place_btn_search_detail">%s 상세 장소 검색하기</string>
    <string name="recommend_place_top_bar">%s 상세 장소</string>
    <string name="recommend_place_chip_cafe">카페</string>
    <string name="recommend_place_chip_restaurant">식당</string>
    <string name="recommend_place_chip_study_cafe">스터디카페</string>
    <string name="recommend_place_chip_study_room">스터디룸</string>
    <string name="recommend_place_chip_library">도서관</string>
    <string name="item_recommend_close_time">영업 종료 시간</string>
    <string name="item_recommend_tel">연락처</string>
    <string name="space_info_group_name_title">모이닷 스페이스 이름</string>
    <string name="space_info_member_remove">모임원 내보내기</string>
    <string name="space_info_edit_my_info">내 정보 편집하기</string>
    <string name="space_info_delete_space"><u>모이닷 스페이스 삭제하기</u></string>
    <string name="space_info_exit_space"><u>모이닷 스페이스 나가기</u></string>
    <string name="space_info_share_title">모임원을 초대해보세요!</string>
    <string name="space_info_copy_url">URL 복사하기</string>
    <string name="space_info_share_with_kakao">카카오톡 공유하기</string>
    <string name="space_leader_info_member_remove_exit">내보내기 모드 나가기</string>
    <string name="space_leader_info_dialog_remove_member_title">정말 모임원 ‘%s’ 을(를) 내보내시겠어요?</string>
    <string name="space_leader_info_dialog_remove_member_content">모임원을 내보내시면 해당 모임원이 작성한 모든 정보가 삭제되며 다시 불러올 수 없습니다.</string>
    <string name="space_leader_info_dialog_remove_member_btn">모임원 내보내기</string>
    <string name="space_leader_info_dialog_delete_title">모임장이 나가면 모이닷 스페이스가 없어져요!</string>
    <string name="space_leader_info_dialog_delete_content">모임장이 모이닷 스페이스를 나가게 되면 모이닷 스페이스에 등록된 모임원의 정보, 추천 장소, 투표, 일정 등 모든 정보가 삭제됩니다.</string>
    <string name="space_leader_info_dialog_delete_btn">모이닷 스페이스 삭제하기</string>
    <string name="edit_group_name_new_group_name_title">모임의 새로운 이름을\n알려주세요.</string>
    <string name="edit_group_name_new_group_name_content">원래 이름은 %s 였어요!</string>
    <string name="space_member_info_dialog_title">정말 ‘%s’ 에서 나가시겠어요?</string>
    <string name="space_member_info_dialog_content">모이닷 스페이스를 나가게 되면 입력하신 정보가 삭제되고 스페이스 리스트에서 조회가 불가능합니다.</string>
    <string name="space_member_info_dialog_btn">모이닷 스페이스 나가기</string>
    <string name="space_leader_default_no_member_input_location">아직 출발 위치를 입력한\n모임원이 없어요!</string>
    <string name="create_vote_top_bar">투표 시작하기</string>
    <string name="create_vote_title">투표로 장소를 확정해 보세요.</string>
    <string name="create_vote_content">투표를 시작하면 모임원의 참여 정보 변경이 어려워요.</string>
    <string name="create_vote_has_end_time">종료시간이 있는 투표인가요?</string>
    <string name="create_vote_check_end_time">종료시간을 설정할래요.</string>
    <string name="create_vote_set_end_time">종료시간을 선택해주세요.</string>
    <string name="create_vote_set_date">날짜를 설정해주세요.</string>
    <string name="create_vote_set_time">시간을 설정해주세요.</string>
    <string name="create_vote_has_else_setting">그외 다른 설정사항들이 있나요?</string>
    <string name="create_vote_multiple_selections">복수선택</string>
    <string name="create_vote_anonymous_vote">익명투표</string>
    <string name="create_vote_start_vote">투표 시작하기</string>
    <string name="create_vote_date_picker_title">날짜 선택</string>
    <string name="create_vote_time_picker_title">시간 선택</string>
    <string name="create_vote_end_time_msg_vote_start">투표가 시작되었어요!</string>
    <string name="create_vote_end_time_msg_vote_end">종료하기를 누르면 투표가 종료돼요.</string>
    <string name="member_vote_before_title">모임장이 아직\n투표를 시작하지 않았어요!</string>
    <string name="member_vote_before_content">모임장에게 투표를 요청할 수 있어요.</string>
    <string name="member_vote_before_btn">모임장에게 투표 요청하기</string>
    <string name="member_vote_progress_title">장소 투표가 진행중이에요!</string>
    <string name="member_vote_multiple_choice">복수선택</string>
    <string name="member_vote_anonymous_vote">익명투표</string>
    <string name="member_vote_progress_btn">투표하기</string>
    <string name="member_vote_end_date">%d.%d.%d %s종료</string>
    <string name="member_vote_finish_title">장소 투표가 완료되었어요!</string>
    <string name="leader_vote_before_content">장소 투표를 시작해볼까요?</string>
    <string name="leader_vote_before_title">모두 정보를 입력하였다면\n투표로 장소를 정할 수 있어요.</string>
    <string name="leader_vote_before_btn">투표 시작하기</string>
    <string name="leader_vote_empty_title">장소 투표를 통해\n장소를 정해보세요!</string>
    <string name="leader_vote_empty_content">아직은 모이닷 스페이스에 모임원이\n초대되지 않아서 장소 투표를 진행할 수 없어요.</string>
    <string name="leader_vote_progress_title">장소 투표가 진행중이에요!</string>
    <string name="leader_vote_progress_btn_vote">투표하기</string>
    <string name="leader_vote_progress_btn_done">투표 완료하기</string>
    <string name="leader_vote_progress_btn_re_vote">다시 투표하기</string>
    <string name="leader_vote_progress_end">투표 종료하기</string>
    <string name="leader_vote_multiple_choice">복수선택</string>
    <string name="leader_vote_anonymous_vote">익명투표</string>
    <string name="leader_vote_end_date">%d.%d.%d %s종료</string>
    <string name="leader_vote_finish_title">장소 투표가 완료되었어요!</string>
    <string name="leader_vote_finish_restart_vote">투표 초기화하기</string>
    <string name="setting_top_bar">설정</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_terms_of_service">이용 약관</string>
</resources>