<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.moidot.moidot.presentation.ui.onboard.view.OnboardFirstFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fg_onboard_first_cl_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_onboard_arched_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fg_onboard_first_tv_skip"
                style="@style/b2_reg_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="17dp"
                android:onClick="@{() -> fragment.exitOnboard()}"
                android:text="@string/onboard_skip"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fg_onboard_first_guide_line_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.31" />

            <TextView
                android:id="@+id/fg_onboard_first_tv_bubble_one"
                style="@style/b1_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_onboard_first_bubble"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:text="@string/onboard_first_bubble_one"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/fg_onboard_first_tv_bubble_two"
                app:layout_constraintTop_toBottomOf="@id/fg_onboard_first_guide_line_top" />

            <TextView
                android:id="@+id/fg_onboard_first_tv_bubble_two"
                style="@style/b1_bold_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_onboard_first_bubble"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp"
                android:text="@string/onboard_first_bubble_two"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fg_onboard_first_tv_bubble_one" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/bg_onboard_linear"
                app:layout_constraintEnd_toEndOf="@id/fg_onboard_first_tv_bubble_two"
                app:layout_constraintStart_toStartOf="@id/fg_onboard_first_tv_bubble_two"
                app:layout_constraintTop_toBottomOf="@id/fg_onboard_first_tv_bubble_two" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fg_onboard_first_cl_top">

            <LinearLayout
                android:id="@+id/fg_onboard_first_ll_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/b2_bold_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_onboard_keyword"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/onboard_first_keyword_team_play"
                    android:textColor="@color/orange500" />

                <TextView
                    style="@style/b2_bold_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/bg_onboard_keyword"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/onboard_first_keyword_study"
                    android:textColor="@color/orange500" />

                <TextView
                    style="@style/b2_bold_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/bg_onboard_keyword"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/onboard_first_keyword_friend"
                    android:textColor="@color/orange500" />

                <TextView
                    style="@style/b2_bold_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/bg_onboard_keyword"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/onboard_first_keyword_club"
                    android:textColor="@color/orange500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/b2_bold_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_onboard_keyword"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="4dp"
                    android:text="@string/onboard_first_keyword_club"
                    android:textColor="@color/orange500" />

                <TextView
                    style="@style/b2_med_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/onboard_first_etc"
                    android:textColor="@color/gray500" />
            </LinearLayout>

            <TextView
                style="@style/b2_med_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/onboard_first_info_sub"
                android:textColor="@color/gray500" />

            <TextView
                style="@style/h2_bold_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/onboard_first_info_main"
                android:textColor="@color/slate800" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fg_onboard_first_btn_next"
            style="@style/btn_orange500"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{() -> fragment.moveToOnboardSecond()}"
            android:text="@string/all_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>